# bob-gpt

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: researcher.md  test-writer.md
.claude/rules/: git.md  testing.md
configs/: nano.yaml
docs/superpowers/plans/: 2026-03-28-training-loop.md
docs/superpowers/specs/: 2026-03-28-training-design.md
scripts/: bobify.py  generate.py  train.py
src/bob/: config.py
src/bob/embeddings/: embeddings.md
src/bob/inference/: generate.py  sampler.py
src/bob/model/: RMSNorm.md  RoPE.md  attention.py  mlp.py  rmsnorm.py  rope.py  transformer.py
src/bob/tokenizer/: tokenizer.py
src/bob/training/: checkpoint.py  dataset.py  schedule.py  trainer.py
tests/training/: test_checkpoint.py  test_config.py  test_dataset.py  test_schedule.py  test_trainer.py
