[project]
name = "bob"
version = "0.1.0"
description = "LLM built with PyTorch"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
    "pyyaml>=6.0",
    "numpy>=2.4.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/bob"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "D"]
ignore = ["D104", "D105", "D107"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
